Support absolute resolve in addition to relative resolve and a bit of cleanup